# agentic_interview

./: README.md  main.py  pyproject.toml
docs/: architecture.md  scope.md
scripts/: live_interview.py
src/agentic_interview/apps/api/: main.py
src/agentic_interview/apps/realtime/: live_interview.py
src/agentic_interview/core/agents/: copilot.py  evidence.py  planner.py  scoring.py
src/agentic_interview/core/orchestration/: interview_flow.py
src/agentic_interview/core/prompts/: planner.py  signal_extraction.py
src/agentic_interview/core/schemas/: agent_io.py  base.py  evidence.py  interview.py  scoring.py  transcript.py
src/agentic_interview/integrations/google_meet/: implementation.md
src/agentic_interview/ml/llm/: base.py
tests/unit/core/: test_copilot.py  test_interviewflow.py  test_planner.py  test_scoring.py  test_signal_extraction.py
